deploy.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: doh-im-dumb
# ---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doh-dumb-server
  namespace: doh-im-dumb
  labels:
    app: doh-dumb-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app: doh-dumb-server
  template:
    metadata:
      labels:
        app: doh-dumb-server
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: doh-dumb-server
      containers:
        - name: doh-dumb-server
          image: registry.danya02.ru/danya02/doh-im-dumb:latest
          imagePullPolicy: Always
          ports:
            - name: tls
              containerPort: 5443
          
          readinessProbe:
            tcpSocket:
              port: 5443
            initialDelaySeconds: 15
            periodSeconds: 1
          livenessProbe:
            tcpSocket:
              port: 5443
            initialDelaySeconds: 15
            periodSeconds: 5
          
---
apiVersion: v1
kind: Service
metadata:
  name: doh-dumb-service
  namespace: doh-im-dumb

spec:
  ports:
    - name: tls
      port: 443
      targetPort: tls

  selector:
    app: doh-dumb-server
  
  internalTrafficPolicy: Local
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: doh-dumb-ingressroute
  namespace: doh-im-dumb
spec:
  tls:
    domains:
      - main: danya02.ru
  entryPoints:
    - websecure
  routes:
  - match: Host(`doh.danya02.ru`) && PathPrefix(`/dns-query`)
    kind: Rule
    services:
    - name: doh-dumb-service
      port: tls
      serversTransport: doh-cert-ignore
